// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FullPageLogView /> tests loading 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="bp3-spinner"
    >
      <div
        class="bp3-spinner-animation"
      >
        <svg
          height="50"
          stroke-width="8.00"
          viewBox="1.00 1.00 98.00 98.00"
          width="50"
        >
          <path
            class="bp3-spinner-track"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          />
          <path
            class="bp3-spinner-head"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            pathLength="280"
            stroke-dasharray="280 280"
            stroke-dashoffset="210"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FullPageLogView /> tests multi section data 1`] = `
<div>
  <div
    class="main"
    data-testid="multi-section"
  >
    <details
      open=""
    >
      <summary>
        Initialize
      </summary>
      <div>
        <div
          class="logLine"
          style="--char-size: 1ch;"
        >
          <span
            class="lineNumber"
          >
            1
          </span>
          <span
            class="logLine level"
          >
            <span
              class=""
            >
              INFO
            </span>
          </span>
          <span
            class="time"
          >
            2022-03-04 17:00
          </span>
          <span
            class="logLine"
          >
            <span
              class=""
            >
              Initializing..
            </span>
          </span>
        </div>
        <div
          class="logLine"
          style="--char-size: 1ch;"
        >
          <span
            class="lineNumber"
          >
            2
          </span>
          <span
            class="logLine level"
          >
            <span
              class=""
            >
              INFO
            </span>
          </span>
          <span
            class="time"
          >
            2022-03-04 17:00
          </span>
          <span
            class="logLine"
          >
            <span
              class=""
            >
              Querying current replicas
            </span>
          </span>
        </div>
        <div
          class="logLine"
          style="--char-size: 1ch;"
        >
          <span
            class="lineNumber"
          >
            3
          </span>
          <span
            class="logLine level"
          >
            <span
              class=""
            >
              INFO
            </span>
          </span>
          <span
            class="time"
          >
            2022-03-04 17:00
          </span>
          <span
            class="logLine"
          >
            <span
              class=""
            >
              Current replica count is 0
            </span>
          </span>
        </div>
        <div
          class="logLine"
          style="--char-size: 1ch;"
        >
          <span
            class="lineNumber"
          >
            4
          </span>
          <span
            class="logLine level"
          >
            <span
              class=""
            >
              INFO
            </span>
          </span>
          <span
            class="time"
          >
            2022-03-04 17:00
          </span>
          <span
            class="logLine"
          >
            <span
              class=""
            >
              Target replica count is 1
            </span>
          </span>
        </div>
        <div
          class="logLine"
          style="--char-size: 1ch;"
        >
          <span
            class="lineNumber"
          >
            5
          </span>
          <span
            class="logLine level"
          >
            <span
              class=""
            >
              INFO
            </span>
          </span>
          <span
            class="time"
          >
            2022-03-04 17:00
          </span>
          <span
            class="logLine"
          >
            <span
              class=""
            >
              Done.
            </span>
          </span>
        </div>
      </div>
    </details>
    <details
      open=""
    >
      <summary>
        Scale
      </summary>
      <div>
        <div
          class="logLine"
          style="--char-size: 1ch;"
        >
          <span
            class="lineNumber"
          >
            1
          </span>
          <span
            class="logLine level"
          >
            <span
              class=""
            >
              INFO
            </span>
          </span>
          <span
            class="time"
          >
            2022-03-04 17:00
          </span>
          <span
            class="logLine"
          >
            <span
              class=""
            >
              Initializing..
            </span>
          </span>
        </div>
        <div
          class="logLine"
          style="--char-size: 1ch;"
        >
          <span
            class="lineNumber"
          >
            2
          </span>
          <span
            class="logLine level"
          >
            <span
              class=""
            >
              INFO
            </span>
          </span>
          <span
            class="time"
          >
            2022-03-04 17:00
          </span>
          <span
            class="logLine"
          >
            <span
              class=""
            >
              Querying current replicas
            </span>
          </span>
        </div>
        <div
          class="logLine"
          style="--char-size: 1ch;"
        >
          <span
            class="lineNumber"
          >
            3
          </span>
          <span
            class="logLine level"
          >
            <span
              class=""
            >
              INFO
            </span>
          </span>
          <span
            class="time"
          >
            2022-03-04 17:00
          </span>
          <span
            class="logLine"
          >
            <span
              class=""
            >
              Current replica count is 0
            </span>
          </span>
        </div>
        <div
          class="logLine"
          style="--char-size: 1ch;"
        >
          <span
            class="lineNumber"
          >
            4
          </span>
          <span
            class="logLine level"
          >
            <span
              class=""
            >
              INFO
            </span>
          </span>
          <span
            class="time"
          >
            2022-03-04 17:00
          </span>
          <span
            class="logLine"
          >
            <span
              class=""
            >
              Target replica count is 1
            </span>
          </span>
        </div>
        <div
          class="logLine"
          style="--char-size: 1ch;"
        >
          <span
            class="lineNumber"
          >
            5
          </span>
          <span
            class="logLine level"
          >
            <span
              class=""
            >
              INFO
            </span>
          </span>
          <span
            class="time"
          >
            2022-03-04 17:00
          </span>
          <span
            class="logLine"
          >
            <span
              class=""
            >
              Done.
            </span>
          </span>
        </div>
      </div>
    </details>
    <details
      open=""
    >
      <summary>
        Wrap Up
      </summary>
      <div>
        <div
          class="logLine"
          style="--char-size: 1ch;"
        >
          <span
            class="lineNumber"
          >
            1
          </span>
          <span
            class="logLine level"
          >
            <span
              class=""
            >
              INFO
            </span>
          </span>
          <span
            class="time"
          >
            2022-03-04 17:00
          </span>
          <span
            class="logLine"
          >
            <span
              class=""
            >
              Initializing..
            </span>
          </span>
        </div>
        <div
          class="logLine"
          style="--char-size: 1ch;"
        >
          <span
            class="lineNumber"
          >
            2
          </span>
          <span
            class="logLine level"
          >
            <span
              class=""
            >
              INFO
            </span>
          </span>
          <span
            class="time"
          >
            2022-03-04 17:00
          </span>
          <span
            class="logLine"
          >
            <span
              class=""
            >
              Querying current replicas
            </span>
          </span>
        </div>
        <div
          class="logLine"
          style="--char-size: 1ch;"
        >
          <span
            class="lineNumber"
          >
            3
          </span>
          <span
            class="logLine level"
          >
            <span
              class=""
            >
              INFO
            </span>
          </span>
          <span
            class="time"
          >
            2022-03-04 17:00
          </span>
          <span
            class="logLine"
          >
            <span
              class=""
            >
              Current replica count is 0
            </span>
          </span>
        </div>
        <div
          class="logLine"
          style="--char-size: 1ch;"
        >
          <span
            class="lineNumber"
          >
            4
          </span>
          <span
            class="logLine level"
          >
            <span
              class=""
            >
              INFO
            </span>
          </span>
          <span
            class="time"
          >
            2022-03-04 17:00
          </span>
          <span
            class="logLine"
          >
            <span
              class=""
            >
              Target replica count is 1
            </span>
          </span>
        </div>
        <div
          class="logLine"
          style="--char-size: 1ch;"
        >
          <span
            class="lineNumber"
          >
            5
          </span>
          <span
            class="logLine level"
          >
            <span
              class=""
            >
              INFO
            </span>
          </span>
          <span
            class="time"
          >
            2022-03-04 17:00
          </span>
          <span
            class="logLine"
          >
            <span
              class=""
            >
              Done.
            </span>
          </span>
        </div>
      </div>
    </details>
  </div>
</div>
`;

exports[`<FullPageLogView /> tests retry node 1`] = `
<div>
  <div
    class="main"
    data-testid="single-section"
  >
    <div>
      <div
        class="logLine"
        style="--char-size: 1ch;"
      >
        <span
          class="lineNumber"
        >
          1
        </span>
        <span
          class="logLine level"
        >
          <span
            class=""
          >
            INFO
          </span>
        </span>
        <span
          class="time"
        >
          2022-03-04 17:00
        </span>
        <span
          class="logLine"
        >
          <span
            class=""
          >
            Initializing..
          </span>
        </span>
      </div>
      <div
        class="logLine"
        style="--char-size: 1ch;"
      >
        <span
          class="lineNumber"
        >
          2
        </span>
        <span
          class="logLine level"
        >
          <span
            class=""
          >
            INFO
          </span>
        </span>
        <span
          class="time"
        >
          2022-03-04 17:00
        </span>
        <span
          class="logLine"
        >
          <span
            class=""
          >
            Querying current replicas
          </span>
        </span>
      </div>
      <div
        class="logLine"
        style="--char-size: 1ch;"
      >
        <span
          class="lineNumber"
        >
          3
        </span>
        <span
          class="logLine level"
        >
          <span
            class=""
          >
            INFO
          </span>
        </span>
        <span
          class="time"
        >
          2022-03-04 17:00
        </span>
        <span
          class="logLine"
        >
          <span
            class=""
          >
            Current replica count is 0
          </span>
        </span>
      </div>
      <div
        class="logLine"
        style="--char-size: 1ch;"
      >
        <span
          class="lineNumber"
        >
          4
        </span>
        <span
          class="logLine level"
        >
          <span
            class=""
          >
            INFO
          </span>
        </span>
        <span
          class="time"
        >
          2022-03-04 17:00
        </span>
        <span
          class="logLine"
        >
          <span
            class=""
          >
            Target replica count is 1
          </span>
        </span>
      </div>
      <div
        class="logLine"
        style="--char-size: 1ch;"
      >
        <span
          class="lineNumber"
        >
          5
        </span>
        <span
          class="logLine level"
        >
          <span
            class=""
          >
            INFO
          </span>
        </span>
        <span
          class="time"
        >
          2022-03-04 17:00
        </span>
        <span
          class="logLine"
        >
          <span
            class=""
          >
            Done.
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FullPageLogView /> tests single section data 1`] = `
<div>
  <div
    class="main"
    data-testid="single-section"
  >
    <div>
      <div
        class="logLine"
        style="--char-size: 1ch;"
      >
        <span
          class="lineNumber"
        >
          1
        </span>
        <span
          class="logLine level"
        >
          <span
            class=""
          >
            INFO
          </span>
        </span>
        <span
          class="time"
        >
          2022-03-04 17:00
        </span>
        <span
          class="logLine"
        >
          <span
            class=""
          >
            Initializing..
          </span>
        </span>
      </div>
      <div
        class="logLine"
        style="--char-size: 1ch;"
      >
        <span
          class="lineNumber"
        >
          2
        </span>
        <span
          class="logLine level"
        >
          <span
            class=""
          >
            INFO
          </span>
        </span>
        <span
          class="time"
        >
          2022-03-04 17:00
        </span>
        <span
          class="logLine"
        >
          <span
            class=""
          >
            Querying current replicas
          </span>
        </span>
      </div>
      <div
        class="logLine"
        style="--char-size: 1ch;"
      >
        <span
          class="lineNumber"
        >
          3
        </span>
        <span
          class="logLine level"
        >
          <span
            class=""
          >
            INFO
          </span>
        </span>
        <span
          class="time"
        >
          2022-03-04 17:00
        </span>
        <span
          class="logLine"
        >
          <span
            class=""
          >
            Current replica count is 0
          </span>
        </span>
      </div>
      <div
        class="logLine"
        style="--char-size: 1ch;"
      >
        <span
          class="lineNumber"
        >
          4
        </span>
        <span
          class="logLine level"
        >
          <span
            class=""
          >
            INFO
          </span>
        </span>
        <span
          class="time"
        >
          2022-03-04 17:00
        </span>
        <span
          class="logLine"
        >
          <span
            class=""
          >
            Target replica count is 1
          </span>
        </span>
      </div>
      <div
        class="logLine"
        style="--char-size: 1ch;"
      >
        <span
          class="lineNumber"
        >
          5
        </span>
        <span
          class="logLine level"
        >
          <span
            class=""
          >
            INFO
          </span>
        </span>
        <span
          class="time"
        >
          2022-03-04 17:00
        </span>
        <span
          class="logLine"
        >
          <span
            class=""
          >
            Done.
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
